@@ -20,6 +20,7 @@ version_plugin = PkgVersion::Block
 
 diag = +Mojolicious
 diag = +Data::Section::Simple
+diag = +Data::Section::Pluggable
 diag = +Data::Section
 
 [Author::Plicease::Core]
@@ -30,6 +31,7 @@ cpan = 1
 [RemovePrereqs]
 remove = Mojo::Loader
 remove = Data::Section::Simple
+remove = Data::Section::Pluggable
 remove = Data::Section
 
 [InsertExample]
